cros: Fix one key error in KSV.

This cl fixes one key error in Keyboard Shortcut Viewer (KSV).

Bug: 823939
Test: manual test.
Change-Id: Iffbed74601548e5980ec36bfbdc51c30d9b3304b
Reviewed-on: https://chromium-review.googlesource.com/972167
Reviewed-by: Qiang Xu <warx@google.com>
Commit-Queue: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544600}
Former-commit-id: 1e8a681519729bd5dee443ad2576d2b895aa0773